# 21vek_tests_project

./: .gitignore  conftest.py  pyproject.toml
core/: base_page.py
pages/: home_page.py
tests/: test_web.py
